Removed some comments

--- a/report.html
+++ b/report.html
@@ -14530,9 +14530,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><a id='introduction'></a></p>
-<h2 id="Introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2><blockquote><p>In this report, I'll be investigating a dataset containing information about <em>approximately</em> 10,000 movies collected from The Movie Database (TMDb) to answer some questions. This is not endorsed or certified by TMDb.</p>
-</blockquote>
-
+<h2 id="Introduction">Introduction<a class="anchor-link" href="#Introduction">&#182;</a></h2>
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
@@ -16269,8 +16267,7 @@ memory usage: 1.2+ MB
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<blockquote><p>Again, graphing a <strong>histogram</strong> to visualize the distribution of a large number of observations.</p>
-<p>After grouping all our dataset by genre, an adjusted value of average popularity was mathmaticaly calculated for each genre.</p>
+<blockquote><p>After grouping all our dataset by genre, an adjusted value of average popularity was mathmaticaly calculated for each genre.</p>
 <p><em>'Comedy'</em> and <em>'Drama'</em> genres are once again <strong>more</strong> superior than any other genre.</p>
 </blockquote>
 
